fix contancts layout bugs

--- a/client/templates/contacts/contacts.import.less
+++ b/client/templates/contacts/contacts.import.less
@@ -11,7 +11,9 @@
     align-items: center;
     width: 100%;
     height: 40px;
-    // padding-left: 15px;
+    i {
+      font-size: 21px;
+    }
   }
   &.contacts-expanded {
     height: 100%;
@@ -27,7 +29,6 @@
     .m-bar {
       background: white;
       height: 30px;
-      display: flex;
       input {
         padding: 0;
         height: 100%;
@@ -41,10 +42,9 @@
   }
   &.contacts-folded {
     height: 40px;
-    padding-left: 15px;
-  }
-  i {
-    font-size: 21px;
-    margin-right: 8px;
+    i {
+      margin-left: 15px;
+      margin-right: 8px;
+    }
   }
 }
